@@ -13,7 +13,7 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.9.5-16
+Version: 0.9.5-17
 Date: 2016-04-12
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
