@@ -111,6 +111,19 @@ textmodel_wordfish <- function(data, dir = c(1, 2), priors = c(Inf, Inf, 3, 1), 
     dispersion <- match.arg(dispersion)
     dispersionLevel <- match.arg(dispersionLevel)
     
+    # check that no rows or columns are all zero
+    zeroLengthDocs <- which(ntoken(data) == 0)
+    if (length(zeroLengthDocs)) {
+        data <- data[-zeroLengthDocs, ]
+        cat("Note: removed the following zero-token documents:", docnames(data[zeroLengthDocs, ]), "\n")
+    }
+    zeroLengthFeatures <- which(docfreq(data) == 0)
+    if (length(zeroLengthFeatures)) {
+            data <- data[, -zeroLengthFeatures]
+        cat("Note: removed the following zero-count features:", features(data[, zeroLengthFeatures]), "\n")
+    }
+    if (length(zeroLengthDocs) | length(zeroLengthFeatures)) cat("\n")
+
     # some error checking
     if (length(priors) != 4)
         stop("priors requires 4 elements")
